# role-symlinks

./: .ansible-lint  .travis.yml  README.md  pyproject.toml
.cookiecutter/: cookiecutter.json
.github/scripts/: build.sh
.github/workflows/: push.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/fail_on_error/: cleanup.yml  converge.yml  verify.yml
molecule/fail_on_error/vars/: main.yml
molecule/ignore_error/: verify.yml
molecule/ignore_error/vars/: main.yml
tasks/: main.yml
