[tool.poetry]
name = "role-symlinks"
version = "0.1.1"
description = "Ansible role that populates configured symlinks."
authors = ["Niall Byrne <niall@niallbyrne.ca>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
ansible = "^4.0.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.8"
commitizen = "^2.17.6"
molecule = {extras = ["docker"], version = "^3.3.0"}
yamllint = "^1.26.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
